--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-<script src="node_modules/phaser/build/phaser.min.js"></script>
+<script src="static/phaser.min.js"></script>
 <script src="static/bundle.js"></script>
 <script src="//localhost:35729/livereload.js"></script>
 </body>
